[gd_scene load_steps=3 format=3 uid="uid://gvn6xt2xg5a1"]

[ext_resource type="Script" uid="uid://cpyi14g11qptr" path="res://game_item.gd" id="1_y00rd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vwb5r"]
size = Vector2(10, 10)

[node name="GameItem" type="Node2D"]
script = ExtResource("1_y00rd")
metadata/_custom_type_script = "uid://cpyi14g11qptr"

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_vwb5r")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
